<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>service_load_balancing</name>
  <version>0.1.0</version>
  <description>This package helps ROS2 services implement load balancing functionality.</description>
  <maintainer email="barry.xu@sony.com">Barry Xu</maintainer>
  <maintainer email="Tomoya.Fujita@sony.com">Tomoya Fujita</maintainer>
  <license>Apache-2.0</license>
  <author email="barry.xu@sony.com">Barry Xu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_typesupport_introspection_cpp</build_depend>

  <exec_depend>rosidl_typesupport_introspection_cpp</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <test_depend>rclcpp</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>example_interfaces</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
